crash @ nsMsgThreadedDBView::AddKeys - msgHeader is null
Categories
(MailNews Core :: Backend, defect)
Tracking
(thunderbird_esr68 fixed, thunderbird73 fixed)
People
(Reporter: wsmwk, Assigned: mkmelin)
Details
(Keywords: crash, Whiteboard: [rare])
Crash Data
Attachments
(1 file)
|
1.29 KB,
patch
|
benc
:
review+
mkmelin
:
approval-comm-beta+
mkmelin
:
approval-comm-esr68+
|
Details | Diff | Splinter Review |
Updated•15 years ago
|
| Reporter | ||
Comment 2•13 years ago
|
||
Comment 3•10 years ago
|
||
Updated•10 years ago
|
| Reporter | ||
Updated•8 years ago
|
| Reporter | ||
Comment 4•7 years ago
|
||
| Reporter | ||
Comment 5•6 years ago
|
||
now rare in version 68. Not sure comment 1 is still relevant to present day crashes.
Worth doing anything based on bp-b74cec27-bffe-48cd-bedd-1cd110200122 or keep this open for a rainy day? Or kill it off as not actionable?
| Assignee | ||
Comment 6•6 years ago
|
||
We might as well fix this as it's pretty clear now.
Comment 7•6 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/97590cfd1343
fix crash at nsMsgThreadedDBView::AddKeys. r=benc DONTBUILD
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Comment 9•6 years ago
|
||
Thunderbird 73.0b2:
https://hg.mozilla.org/releases/comm-beta/rev/58019f894ca640359219c1fdc11f88da9e3d7011
| Assignee | ||
Updated•6 years ago
|
Comment 10•6 years ago
|
||
| bugherder uplift | ||
Thunderbird 68.5.0:
https://hg.mozilla.org/releases/comm-esr68/rev/3d5f67145587
| Reporter | ||
Comment 11•6 years ago
|
||
Assessing crash-stats of the past 3 months I don't see a change in the crash rate, so I'd say the patch had little or no impact.
https://crash-stats.mozilla.org/signature/?signature=nsMsgThreadedDBView%3A%3AAddKeys&date=%3E%3D2019-12-06T07%3A02%3A00.000Z&date=%3C2020-03-06T07%3A02%3A00.000Z&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&_columns=install_time&_columns=startup_crash&_sort=-date&page=1#summary
bp-c6725f30-445c-415e-b53b-eb6be0200305 68.5.0. (same stack as bp-26ff19b3-f99c-445d-836d-fc98b0200210 68.4.2)
| Reporter | ||
Updated•6 years ago
|
| Assignee | ||
Comment 12•6 years ago
|
||
Looks like that is another crash, maybe related but not the same as the one originally reported and fixed. I don't see how https://searchfox.org/comm-central/rev/365b1519f0659eb59d785804c7372d525f8334d1/mailnews/base/src/nsMsgThreadedDBView.cpp#118 would crash, but maybe it gets stuck in the loop somehow.
Description
•