Bug 615111 - fix crash at nsMsgThreadedDBView::AddKeys. r=benc DONTBUILD